# synapse-api

./: CMakeLists.txt  CMakePresets.json  COPYRIGHT  Makefile  README.md  build.sh  vcpkg.json
.github/: pull_request_template.md
.github/workflows/: proto-check.yaml
api/: app.proto  channel.proto  datatype.proto  device.proto  files.proto  logging.proto  node.proto  performance.proto  query.proto  status.proto  synapse.proto  tap.proto  time.proto  update.proto
api/nodes/: application.proto  broadband.proto  broadband_source.proto  camera.proto  controller.proto  disk_writer.proto  electrical_broadband.proto  electrical_stim.proto  electrical_stimulation.proto  image_sink.proto  image_source.proto  optical_broadband.proto  optical_stim.proto  optical_stimulation.proto  signal_config.proto  signal_status.proto  spectral_filter.proto  spike_bin.proto  spike_binner.proto  spike_detect.proto  spike_detector.proto  spike_source.proto  stream_in.proto  stream_out.proto
include/: device.h  node.h  signal_chain.h  synapse.h
include/nodes/: camera.h  electrical_broadband.h  electrical_stim.h  inference.h  optical_broadband.h  optical_stim.h  output_node.h  spectral_filter.h  spike_detect.h  stream_in.h  stream_out.h
include/synapse/: device.h  node.h  signal_chain.h  status.h  synapse.h
include/synapse/nodes/: electrical_broadband.h  electrical_stim.h  optical_broadband.h  optical_stim.h  spectral_filter.h  spike_detect.h  stream_in.h  stream_out.h
proto/: device.proto  electrical_broadband.proto  electrical_stim.proto  node.proto  optical_broadband.proto  optical_stim.proto  signal_chain.proto  spectral_filter.proto  spike_detect.proto  stream_in.proto  stream_out.proto  synapse.proto
src/: client_main.cpp  synapse_client.cpp  synapse_client.h
streaming/: broadband.capnp
tests/: client_main.cpp  daemon_main.cpp  main.cpp  server_main.cpp  synapse_daemon.cpp  synapse_server.cpp  synapse_server.h
